# rempack

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  old_CMakeLists.txt  setup_debugger.sh
.run/: rempack.run.xml
impl/: CMakeLists.txt  rmkit_impl.cpp  stb_impl.cpp
include/: font_embed.h  utils.h
opkg/: CMakeLists.txt  cache.cpp  formatting.cpp  opkg.cpp  opkg.h  parser.cpp
rules/: platform_rules.cpp  platform_rules.h
src/: ListFilter.cpp  ListFilter.h  Rempack.cpp  Rempack.h  main.cpp  rempack.cpp  rempack.h  widget_helpers.h
src/ui/: layouts.h
src_old/: main.cpp  rempack.cpp  rempack.h
ui/: CMakeLists.txt  buttons.cpp  buttons.h  data.h  dispatcher.cpp  dispatcher.h  keyboard.cpp  list_box.cpp  list_box.h  overlay.cpp  overlay.h  rempack_widgets.cpp  rempack_widgets.h  text_helpers.h  widgets.cpp  widgets.h
ui/buttons/: buttons.h  event_button.cpp  event_button.h  image_button.cpp  image_button.h
ui/debug/: debug_widgets.h
ui/display/: bordered_image.cpp  bordered_image.h  list_box.cpp  list_box.h  overlay.cpp  overlay.h
ui/include/: list_box.h  rempack_widgets.h  widgets.h
ui/input/: input.h  labeled_range.cpp  labeled_range.h  rounded_text_input.cpp  rounded_text_input.h
ui/input/keyboard/: keyboard.cpp  keyboard.h
ui/rempack/: config_button.cpp  config_button.h  filter_button.cpp  filter_button.h  package_info_panel.cpp  package_info_panel.h  rempack_widgets.h  search_box.cpp  search_box.h
ui/rempack/dialog/: conflict_dialog.cpp  conflict_dialog.h  install_dialog.cpp  install_dialog.h  rdialog.h  terminal_dialog.cpp  terminal_dialog.h  uninstall_dialog.cpp  uninstall_dialog.h
ui/rempack/overlay/: filter_options.h  filter_overlay.cpp  filter_overlay.h  menu_data.h  menu_overlay.cpp  menu_overlay.h  roverlay.h
ui_old/: list_box.h  widgets.h
